feat: add extra args support

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,11 @@ on:
           - riscv64
           - s390x
           - ppc64le
+      extra-args:
+        description: 'Extra arguments to pass to the build script'
+        required: false
+        type: string
+        default: ''
 
 jobs:
   run:
@@ -42,7 +47,7 @@ jobs:
           mcr.microsoft.com/dotnet-buildtools/prereqs:azurelinux-3.0-net10.0-cross-${{ inputs.architecture }} \
           sh -c '
             ./prep-source-build.sh &&
-            ./build.sh --clean-while-building -sb --os linux --arch ${{ inputs.architecture }}
+            ./build.sh --clean-while-building -sb --os linux --arch ${{ inputs.architecture }} ${{ inputs.extra-args }}
           '
 
     - name: List assets directory
